--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,13 +54,13 @@ img{
 }
 
 .im1{
-    margin-left: 90px;
+    margin-left: 0px;
 }
 .im2{
     margin-left: 1px;
 }
 .im3{
-    margin-left: 80px;
+    margin-left: 0px;
 }
 
 .winner_title{
@@ -122,23 +122,164 @@ img{
     font-size: 2.5rem;
     text-align: center;
 }
-
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .title {
+    display: flex;
+    align-items: center;
+  }
 
 @media only screen and (max-width:600px){
-    #title{
-        margin-left: 65%;
-        margin-top: -5%;
-    }
-    .title{
+    .title {
+        flex-direction: row;
+        /* Reverse order of elements to have h1_title in center */
+        flex-direction: row-reverse;
+
+      }
+    .image_game {
         width: 20px;
         height: 20px;
-        margin-right: 25%;
+    }
+    .blackboard{
+        margin-top: 190px;
+        width: 250px;
+        height: 250px;
+    }
+    table{
+        display: inline-block;
+        margin-top: 240px !important;
+        margin: 10%;
+        width: 150px;
+        height: 150px;
+        
+    }
+    /* grill */
+    td{
+        margin-top: 180px;
+        width: 40px;
+        height: 40px;
+    }
+    
+    #title{
+        margin-left: 25%;
+        margin-top: -5%;
+        
+    }
+    .title{
+        display: flex;
+        font-size: 16px;
+        width: 20px;
+        height: 20px;
+        margin-right: 50px;
+        margin-left: 20px;
     }
     .img_title{
-        margin-left: 220%;
+        width: 30px;
+        height: 30px;
+        margin-left: 0px;
+    }
+    h1{
+        font-size: 1.5rem;
+        color: whitesmoke;
+        margin: 0px 0px;
+        font-weight: 500;
+    }
+    .im1,
+    .im2,
+    .im3{
+        margin: 20px;
+        display: inline-block;
     }
     .off{
         display: none;
     }
+   .winner_title{
+    z-index: 3;
+    width: 150px;
+    height: 80px;
+    font-size: 0.6rem;
+    margin: 40px 10px;
+    font-weight: 500;
+}
+.disp{
+    position: absolute;
+    margin-left: 100px ;
+    margin-top: 120px;
+    z-index: 3;
+    background-color: black;
+    color: aliceblue;
+    width: 120px;
+    height: 80px;
+    border: 3px aliceblue solid;
+    border-radius: 10%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 1rem;
+    text-align: center;
+}
     
 }
+
+
+  /* Footer */
+
+  #footer {
+    background: #f7f8f9;
+    color: #45505b;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px 0;
+  }
+  
+  #footer h3 {
+    font-size: 36px;
+    font-weight: 700;
+    position: relative;
+    font-family: "Poppins", sans-serif;
+    padding: 0;
+    margin: 0 0 15px 0;
+  }
+  
+  #footer p {
+    font-size: 15;
+    font-style: italic;
+    padding: 0;
+    margin: 0 0 40px 0;
+  }
+  
+  #footer .social-links {
+    margin: 0 0 40px 0;
+  }
+  
+  #footer .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: #0563bb;
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+  }
+  
+  #footer .social-links a:hover {
+    background: #0678e3;
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  #footer .copyright {
+    margin: 0 0 5px 0;
+  }
+  
+  #footer .credits {
+    font-size: 13px;
+  }
+.
